--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env PORT=80 node index.js",
-    "start-prod": "sudo cross-env PORT=80 pm2 start index.js -f",
+    "start-prod": "cross-env PORT=80 pm2 start index.js -f",
     "start-dev": "cross-env PORT=3000 nodemon index.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Rasmus-Lykke/node-mandatory-2#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
     "uglify-js": "^3.9.2"
   },
