--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "mandatory_2",
-  "version": "1.0.0",
-  "description": "This is my mandatory project for the Node.js elective",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env PORT=80 node app.js",
-    "start-prod": "cross-env PORT=80 pm2 start app.js -f",
-    "start-dev": "cross-env PORT=3000 nodemon app.js",
-
-    "migrate:latest": "knex migrate:latest",
-    "migrate:make": "knex migrate:make ",
-    "migrate:rollback": "knex migrate:rollback",
-
-    "seed:make": "knex seed:make",
-    "seed:run": "knex seed:run"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rasmus-Lykke/node-mandatory-2.git"
-  },
-  "keywords": [
-    "web",
-    "page"
-  ],
-  "author": "Rasmus Lykke Sørensen",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Rasmus-Lykke/node-mandatory-2/issues"
-  },
-  "homepage": "https://github.com/Rasmus-Lykke/node-mandatory-2#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "knex": "^0.21.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.3",
-    "objection": "^2.1.3"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.2"
-  }
+    "name": "mandatory_2",
+    "version": "1.0.0",
+    "description": "This is my mandatory project for the Node.js elective",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "cross-env PORT=80 node app.js",
+        "start-prod": "cross-env PORT=80 pm2 start app.js -f",
+        "start-dev": "cross-env PORT=3000 nodemon -L app.js",
+        "migrate:latest": "knex migrate:latest",
+        "migrate:make": "knex migrate:make ",
+        "migrate:rollback": "knex migrate:rollback",
+        "seed:make": "knex seed:make",
+        "seed:run": "knex seed:run"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Rasmus-Lykke/node-mandatory-2.git"
+    },
+    "keywords": [
+        "web",
+        "page",
+        "cars",
+        "pictures"
+    ],
+    "author": "Rasmus Lykke Sørensen",
+    "license": "MIT",
+    "dependencies": {
+        "bcrypt": "^4.0.1",
+        "express": "^4.17.1",
+        "express-rate-limit": "^5.1.3",
+        "express-session": "^1.17.1",
+        "knex": "^0.21.1",
+        "multer": "^1.4.2",
+        "mysql": "^2.18.1",
+        "nodemon": "^2.0.3",
+        "objection": "^2.1.3",
+        "socket.io": "^2.3.0"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.2"
+    }
 }
