--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "knex": "^0.21.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.3",
+        "node": "^14.2.0",
+        "nodemon": "^2.0.4",
         "objection": "^2.1.3",
         "socket.io": "^2.3.0"
     },
