--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "cross-env PORT=80 node app.js",
         "start-prod": "cross-env PORT=80 pm2 start app.js -f",
-        "start-dev": "cross-env PORT=3000 nodemon -L app.js",
+        "start-dev": "cross-env PORT=3000 nodemon app.js",
         "migrate:latest": "knex migrate:latest",
         "migrate:make": "knex migrate:make ",
         "migrate:rollback": "knex migrate:rollback",
@@ -35,11 +35,11 @@
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "node": "^14.2.0",
-        "nodemon": "^2.0.4",
         "objection": "^2.1.3",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
-        "cross-env": "^7.0.2"
+        "cross-env": "^7.0.2",
+        "nodemon": "^2.0.4"
     }
 }
