--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^4.0.1",
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-rate-limit": "^5.1.3",
         "express-session": "^1.17.1",
+        "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
