--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "node": "^14.2.0",
+        "nodemailer": "^6.4.6",
         "objection": "^2.1.3",
         "socket.io": "^2.3.0"
     },
